--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
 .list {
   margin: 0;
   padding: 0;
-  background: coral;
+  background-color: coral;
   list-style: none;
   width: 80px;
   word-wrap: break-word;
@@ -17,19 +17,46 @@ body {
   overflow-y: auto;
 }
 
-.list span {
-  display: block;
-  padding: 10px;
+.file-list {
+  background-color: tomato;
+}
+
+.list input {
+  border: 0;
+  font-size: 16px;
+  padding: 16px 5px;
+  background-color: coral;
+  width: 100%;
   color: white;
+}
+
+.file-list input {
+  background-color: tomato;
+}
+
+.list input:hover {
+  background-color: tomato;
+}
+.list input:focus {
+  outline: none;
+  background-color: tomato;
+}
+
+.file-list input, .cmd-button {
   cursor: pointer;
 }
 
-.list input.active, .list input:hover {
-  background: tomato;
+.file-list input.active, .file-list input:hover, .file-list input:focus{
+  background-color: coral;
 }
 
+::placeholder {
+  color: white;
+}
+
+
 .main.running .ace_active-line {
-  background: rgba(255,255,0,0.7) !important
+  background: rgba(255, 99, 71, 0.7) !important
 }
 
 .ace_cursor {
@@ -53,13 +80,6 @@ body {
   align-content: stretch;
 }
 
-
-
-/*.ace-editor, .ace-editor-wrapper {
-  flex: 1;
-  position: relative;
-}*/
-
 .ace-flex {
   flex: 1;
   position: relative;
@@ -73,7 +93,6 @@ body {
 }
 
 .scene {
-  /*width: 100px;*/
   flex: 1;
   background-color: teal;
 }
@@ -97,21 +116,33 @@ footer {
   display: flex;
   width: 100%;
   z-index: 10;
+  height: 5px;
+  align-content: stretch;
+  overflow: hidden;
 }
 
-.flex-container {
-  display: flex;
+footer:hover {
+  height: 55px;
 }
 
-.flex-item {
+.header-left {
+  width: 80px;
+  background-color: coral;
+}
+.header-right {
+  width: 80px;
+  background-color: tomato;
+}
+
+.header-middle {
   flex: 1;
+  background-color: coral;
 }
 
 .play-button {
   padding: 7px 20px 5px 20px;
   overflow: hidden;
   cursor: pointer;
-  background-color: tomato;
 }
 
 .pause {
@@ -154,26 +185,8 @@ footer {
   right: 5px;
 }
 
-input[type=range] {
-  flex: 1;
-}
-
-.control {
-  height: 5px;
-  background-color: coral;
-  display: flex;
-  align-content: stretch;
-  flex: 1;
-  overflow: hidden;
-}
-
-.control:hover {
-  height: 55px;
-}
-
 .range-bar {
   display: flex;
-  flex: 1;
   align-content: flex-start;
 }
 
@@ -182,45 +195,10 @@ input[type=range] {
   border-right: 1px solid white;
 }
 
-.list input {
-  border: 0;
-  font-size: 16px;
-  padding: 16px 5px;
-  background: coral;
-  width: 100%;
-  color: white;
-}
-.list input:hover {
-  background-color: tomato;
-}
-.list input:focus {
-  outline: none;
-  background-color: tomato;
+.flex-container {
+  display: flex;
 }
 
-.header-side {
-  width: 80px;
-  background-color: tomato;
-}
-
-.header-middle {
+.flex-item {
   flex: 1;
-  background-color: coral;
-}
-
-::placeholder {
-  color: white;
-}
-
-.file-list input {
-  cursor: pointer;
-}
-
-.cmd-button {
-  cursor: pointer;
-}
-
-.footer-side {
-  background-color: tomato;
-  width: 80px;
 }
