--- a/src/app.css
+++ b/src/app.css
@@ -65,7 +65,7 @@ body {
 
 
 .main.running .ace_active-line {
-  background: rgba(255, 99, 71, 0.7) !important
+  background-color: rgba(255, 99, 71, 0.7) !important
 }
 
 .ace_cursor {
@@ -78,13 +78,13 @@ body {
   flex-direction: column;
   align-content: stretch;
   position: relative;
-  background-color: teal;
+  /*background-color: teal;*/
 }
 
 .wrapper-row {
   margin: 5px 0;
   display: flex;
-  background-color: teal;
+  /*background-color: teal;*/
   flex: 1;
   flex-direction: row;
   align-content: stretch;
@@ -108,6 +108,11 @@ body {
 .scene {
   flex: 1;
   margin-left: 5px;
+  display: flex;
+  align-content: stretch;
+}
+.scene svg {
+  flex: 1;
 }
 
 header {
@@ -208,8 +213,12 @@ footer:hover {
 }
 
 .range-bar .progress {
-  background: tomato;
+  background-color: tomato;
   border-right: 1px solid white;
+}
+
+header .range-bar .progress {
+  background-color: coral;
 }
 
 .flex-container {
@@ -218,4 +227,24 @@ footer:hover {
 
 .flex-item {
   flex: 1;
+}
+
+rect.stack {
+  fill: tan;
+}
+
+g.item rect {
+  fill: coral;
+}
+
+g.top-pointer rect {
+  fill: tomato;
+}
+
+g.items text, g.top-pointer text {
+  fill: white;
+}
+
+g.top-pointer.warning rect {
+  fill: deepskyblue;
 }
