--- a/src/app.css
+++ b/src/app.css
@@ -14,19 +14,20 @@ body {
   padding: 0;
   background-color: coral;
   list-style: none;
-  width: 5px;
+  /*width: 5px;*/
+  /*position: absolute;*/
+  width: 80px;
   /*word-wrap: break-word;*/
   overflow: hidden;
   overflow-y: auto;
-  position: absolute;
-  height: 100%;
+  /*height: 100%;*/
   z-index: 10;
 }
 .list:hover {
   width: 80px;
 }
 .file-list {
-  background-color: tomato;
+  /*background-color: tomato;*/
   right: 0;
 }
 
@@ -40,7 +41,7 @@ body {
 }
 
 .file-list input {
-  background-color: tomato;
+  /*background-color: tomato;*/
 }
 
 .list input:hover {
@@ -56,7 +57,8 @@ body {
 }
 
 .file-list input.active, .file-list input:hover, .file-list input:focus {
-  background-color: coral;
+  background-color: tomato;
+  /*background-color: coral;*/
 }
 
 ::placeholder {
@@ -65,7 +67,7 @@ body {
 
 
 .main.running .ace_active-line {
-  background: rgba(255, 99, 71, 0.7) !important
+  background-color: rgba(255, 99, 71, 0.7) !important
 }
 
 .ace_cursor {
@@ -78,13 +80,11 @@ body {
   flex-direction: column;
   align-content: stretch;
   position: relative;
-  background-color: teal;
 }
 
 .wrapper-row {
-  margin: 5px 0;
+  /*margin: 5px 0;*/
   display: flex;
-  background-color: teal;
   flex: 1;
   flex-direction: row;
   align-content: stretch;
@@ -94,7 +94,7 @@ body {
 .ace-flex {
   flex: 1;
   position: relative;
-  margin-right: 5px;
+  /*margin-right: 5px;*/
 }
 
 .wrapper-code {
@@ -107,14 +107,23 @@ body {
 
 .scene {
   flex: 1;
-  margin-left: 5px;
+  /*margin-left: 5px;*/
+  display: flex;
+  align-content: stretch;
+}
+.scene svg {
+  flex: 1;
+}
+
+header, footer {
+  /*height: 5px;*/
+  height: 55px;
+  /*position: absolute;*/
 }
 
 header {
-  height: 5px;
   background-color: coral;
   display: flex;
-  position: absolute;
   width: 100%;
   z-index: 20;
   overflow: hidden;
@@ -123,24 +132,19 @@ header {
   color: white;
 }
 
-header:hover {
-  height: 55px;
-}
 
 footer {
-  position: absolute;
   bottom: 0;
   display: flex;
   width: 100%;
   z-index: 10;
-  height: 5px;
   align-content: stretch;
   overflow: hidden;
 }
 
-footer:hover {
+/*footer:hover, header:hover {
   height: 55px;
-}
+}*/
 .header-left, .header-right {
   padding: 7px 20px 5px 20px;
   width: 80px;
@@ -149,7 +153,8 @@ footer:hover {
   background-color: coral;
 }
 .header-right {
-  background-color: tomato;
+  background-color: coral;
+  /*background-color: tomato;*/
 }
 
 .header-middle {
@@ -208,8 +213,12 @@ footer:hover {
 }
 
 .range-bar .progress {
-  background: tomato;
+  background-color: tomato;
   border-right: 1px solid white;
+}
+
+header .range-bar .progress {
+  background-color: coral;
 }
 
 .flex-container {
@@ -218,4 +227,24 @@ footer:hover {
 
 .flex-item {
   flex: 1;
+}
+
+rect.stack {
+  fill: tan;
+}
+
+g.item rect {
+  fill: coral;
+}
+
+g.top-pointer rect {
+  fill: tomato;
+}
+
+g.items text, g.top-pointer text {
+  fill: white;
+}
+
+g.top-pointer.warning rect {
+  fill: deepskyblue;
 }
