--- a/src/components/Editor.react.less
+++ b/src/components/Editor.react.less
@@ -5,14 +5,22 @@ pre {
   display: flex;
   flex: 1;
   background-color: #F0F0F0;
+  & .wrapper {
+    height: auto;
+    flex: 1;
+    /*FIXME code top padding*/
+  }
 }
 
 .numbers {
-  padding: 0.5em 0;
   width: 40px;
   box-shadow: 0px 0px 1px 0px black;
   z-index: 2;
   overflow: hidden;
+  & span {
+    /*fix full highlight*/
+    display: block;
+  }
 }
 
 code {
@@ -20,13 +28,26 @@ code {
   overflow: hidden;
   overflow-x: auto;
   overflow-y: auto;
-  padding: 0.5em 0 !important;
+  padding: 0 !important;
+  z-index: 1;
+  background-color: transparent !important;
 }
 
-div.line {
+span.line {
   min-height: 15px;
   padding: 0 0.5em;
   .main.running &.active {
     background-color: @hl;
   }
+}
+
+.hl {
+  position: absolute;
+  left: 0;
+  width: 100%;
+}
+
+.wrapper-hl {
+  position: relative;
+  height: 0px;
 }
