rbt ok/hmt start

--- a/example/templates/template_index.html
+++ b/example/templates/template_index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <title>index - test</title>
+  <link rel="stylesheet" type="text/css" href="./demo.css">
 </head>
 <body>
-<h1>data-structure-animation</h1>
+<h1>data-structure-animation <small><abbr title="lastupdate" class="time-ago"></abbr></small></h1>
 <ul>
 listofdsa
 </ul>
+<script type="text/javascript" src="./demo.js"></script>
 </body>
 </html>
