--- a/src/components/DsaApp.react.less
+++ b/src/components/DsaApp.react.less
@@ -11,7 +11,7 @@
   list-style: none;
   width: @list-width;
   overflow: hidden;
-  overflow-y: auto;
+  overflow-y: auto !important;
   z-index: 10;
 
   & input {
@@ -251,4 +251,13 @@ line {
 pre, code, div, ul {
   min-height: 0px;
   min-width: 0px;
+}
+
+.axis {
+  & path, & line {
+    fill: none;
+    stroke: #000;
+    stroke-width: 3;
+    shape-rendering: crispEdges;
+  }
 }
