--- a/example/templates/template_index.html
+++ b/example/templates/template_index.html
@@ -85,7 +85,7 @@
 <ul>
 listofdsa
 </ul>
-
+<p><a href="https://github.com/dagnaf/data-structure-animation">Source Code</a></p>
 <script type="text/javascript" src="./demo.js"></script>
 </body>
 </html>
