--- a/src/dsa/sssp/Scene.react.less
+++ b/src/dsa/sssp/Scene.react.less
@@ -9,10 +9,6 @@ path.ine {
   fill: deepskyblue;
 }
 
-path.scc {
-  stroke: #ccc;
-  fill: #ccc;
-  stroke-width: 30px;
-  stroke-linejoin: round;
-  opacity: 0.5;
+path.edge.highlighted {
+  stroke-width: 6px;
 }
