--- a/src/components/DsaApp.react.less
+++ b/src/components/DsaApp.react.less
@@ -142,6 +142,7 @@ header {
   background-color: @page-color;
   display: flex;
   width: 100%;
+  // suppress editor number box-shadow
   z-index: 20;
   overflow: hidden;
   text-align: center;
@@ -152,7 +153,8 @@ footer {
   bottom: 0;
   display: flex;
   width: 100%;
-  z-index: 10;
+  // suppress header for tip
+  z-index: 30;
   align-content: stretch;
   overflow: hidden;
 }
