--- a/example/templates/template_page.html
+++ b/example/templates/template_page.html
@@ -10,5 +10,13 @@
 <script type="text/javascript" src="./bower_components/react/react.js"></script>
 <script type="text/javascript" src="./bower_components/d3/d3.js"></script>
 <script type="text/javascript" src="./dsa.js" data-dsa="dsa-name" data-target="demo"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-66726633-1', 'auto');
+  ga('send', 'pageview');
+</script>
 </body>
 </html>
